# DES_Head-Unit

./: .gitignore  README.md  daily_meeting.py  intro_meeting.md  meeting_log.txt  vehicle-system.drawio
HeadUnit/libraries/: CMakeLists.txt
HeadUnit/libraries/src-gen/: README.md
HeadUnit/libraries/src-gen/core/common/battery/v1/commonapi/: BatteryStatus.hpp
HeadUnit/libraries/src-gen/core/proxy/battery/v1/commonapi/: BatteryStatusProxy.hpp
HeadUnit/libraries/src-gen/core/skel/speed/v1/commonapi/: speedStubDefault.hpp
HeadUnit/libraries/src-gen/core/stub/battery/v1/commonapi/: BatteryStatusStub.hpp
apps/CANManager/: CMakeLists.txt
apps/HeadUnit/: CMakeLists.txt  HeadUnit.cpp  HeadUnit.h  HeadUnit.hpp  Main.qml  SpeedClient.cpp  SpeedClient.hpp  cmake_install.cmake  home.qml  main.cpp  main.qml  resources.qrc
apps/HeadUnit/.qt/: QtDeploySupport.cmake
apps/HeadUnit/.qt/deploy_qml_imports/: HeadUnit.cmake
apps/HeadUnit/.qt_plugins/: Qt6_QmlPlugins_Imports_HeadUnit.rsp
apps/HeadUnit/clients/HU_gear_client/: gear_client.cpp
apps/HeadUnit/clients/J_gear_client/: gear_client.cpp
apps/HeadUnit/clients/ambient_receiver/: al_receiver.cpp  al_receiver.hpp
apps/HeadUnit/clients/ambient_sender/: alsender.cpp  alsender.hpp  client.cpp
apps/HeadUnit/clients/battery_client/: battery_client.cpp  battery_client.hpp
apps/HeadUnit/clients/gear_data_receiving_client/: gear_client.cpp  gear_client.hpp
apps/HeadUnit/clients/speed_client/: speed_client.cpp  speed_client.hpp
apps/HeadUnit/config/: vsomeip.json
apps/HeadUnit/fidl/: README.md
apps/HeadUnit/fidl/speed/: speed.fdepl
apps/HeadUnit/modules/home/: Home.qml  home.qml
apps/HeadUnit/modules/media/: Media.qml  media.qml
apps/HeadUnit/modules/menu/: Menu.qml  menu.qml
apps/HeadUnit/modules/settings/: Settings.qml  settings.qml
apps/HeadUnit/modules/spotify/: Spotify_main.qml  Spotify_player.qml  Spotify_playlists.qml  index.html  spotify.cpp  spotify.h  spotify_main.qml  spotify_player.qml  test.html
apps/HeadUnit/modules/youtube/: index.html  youtube_main.qml  youtube_test.qml
apps/HeadUnit/proxy/battery/: battery  batteryclient.cpp
apps/HeadUnit/resources/qml/: FirstContent.qml  Home.qml  Main.qml  Menu.qml  SecondContent.qml  SpotifyMain.qml  SpotifyNowPlaying.qml  ThirdContent.qml
apps/HeadUnit/service/battery/: CMakeLists.txt  README.md
apps/HeadUnit/service/battery/src/: battery.cpp  main.cpp  vehiclebattery.cpp  vehiclebattery.h
apps/HeadUnit/service/battery/tools/: battery.sh
apps/HeadUnit/service/speed/: speed
apps/HeadUnit/service/speed/src/: main.cpp
apps/HeadUnit/shared/utils/: envmanager.cpp  server.hpp  someip.cpp  someip.h  utils.cpp  utils.h
apps/HeadUnit/src/: envmanager.cpp  envmanager.h  spotify.cpp  spotify.h
apps/InstrumentClsuter/: CMakeLists.txt  canmanager.cpp  canmanager.h  canreceiver.cpp  canreceiver.h  circulargauge.cpp  emafilter.cpp  ina219.cpp  ina219.h  main.cpp  mainwindow.h  mainwindow.ui
apps/InstrumentCluster/: Battery.qml  CMakeLists.txt  Gear.qml  Main.qml  Speedometer.qml  Time.qml  batterymonitor.cpp  batterymonitor.h  canbusexception.h  circulargauge.h  emafilter.h  i2cexception.h  instrumentclustercontroller.cpp  instrumentclustercontroller.h  main.cpp  mainwindow.cpp  resources.qrc  vsomeip.json
apps/InstrumentCluster/clients/: headers.hpp
apps/InstrumentCluster/clients/ambient_receiver/: al_receiver.cpp  al_receiver.hpp
apps/InstrumentCluster/clients/battery_client/: battery_client.hpp
apps/InstrumentCluster/clients/gear_data_receiving_client/: gear_client.cpp  gear_client.hpp
apps/InstrumentCluster/clients/speed_client/: speed_client.cpp
apps/InstrumentCluster/qml/: main.qml
apps/ServiceManager/: CMakeLists.txt  Readme.txt  build.sh
apps/ServiceManager/config/: vsomeip-client.json  vsomeip-server.json  vsomeip.json
apps/ServiceManager/src/: a.out  canreceiver.cpp  client-example.cpp  client-example.hpp  client-main.cpp  headers.hpp  main.cpp  sample-ids.hpp  service-example.cpp  service-example.hpp  service-main.cpp
apps/ServiceManager/src/ambient-src/ambient/: ambient.cpp
apps/ServiceManager/src/ambient-src/ambient_sender/: client.cpp
apps/ServiceManager/src/battery/: battery.cpp  battery.hpp
apps/ServiceManager/src/battery-src/battery/: battery.cpp  battery.hpp
apps/ServiceManager/src/battery-src/battery_client/: client-example.cpp  client-example.hpp
apps/ServiceManager/src/battery_client/: client-example.cpp
apps/ServiceManager/src/client_base/: client-example.cpp  client-example.hpp
apps/ServiceManager/src/etc/: service-example.cpp  service-example.hpp
apps/ServiceManager/src/gear/: gear.cpp  gear.hpp
apps/ServiceManager/src/gear-src/HU_gear_client/: gear_client.hpp
apps/ServiceManager/src/gear-src/J_gear_client/: gear_client.cpp
apps/ServiceManager/src/gear-src/gear/: gear.cpp  gear.hpp
apps/ServiceManager/src/gear-src/gear_data_receiving_client/: client-example.cpp  client-main.cpp
apps/ServiceManager/src/gear_client/: gear_client.cpp  gear_client.hpp
apps/ServiceManager/src/multi/: multi-event-example.cpp  multi-event-example.hpp  multi-main.cpp
apps/ServiceManager/src/service_base/: service-base.cpp  service-base.hpp
apps/ServiceManager/src/speed/: canreceiver.cpp  speed.hpp
apps/ServiceManager/src/speed-src/speed/: canreceiver.cpp  canreceiver.hpp  speed.cpp  speed.hpp
apps/ServiceManager/src/speed-src/speed_client/: client-example.cpp
apps/ServiceManager/src/speed_client/: client-example.cpp  client-example.hpp
apps/VehicleController/: CMakeLists.txt  build_and_start.sh  main.cpp
apps/VehicleController/Adafruit_PCA9685/: Adafruit_PCA9685.cpp  Adafruit_PCA9685.hpp
apps/VehicleController/Gamepad/: Joystick.cpp  Joystick.hpp  ShanwanGamepad.cpp  ShanwanGamepad.hpp
apps/VehicleController/PiRacer/: PiRacer.cpp  PiRacer.hpp
apps/VehicleInformationProvider/: CMakeLists.txt
test_example/: CMakeLists.txt
test_example/src/: client-example.cpp  client-main.cpp  main.cpp  sample-ids.hpp  service-example.cpp  service-example.hpp  service-main.cpp
(+81 files in other folders)
